--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -93,6 +93,17 @@ header{
 
 
 }
+
+.mudar {
+    margin-left: 0vw !important;
+}
+.mudar1 {
+    margin-left: -100vw !important;
+}
+.mudar2 {
+    margin-left: -200vw !important;
+}
+
 .banner .sliders{
     width: 1000vw; /* significa capacidade de 10 sliders de 100vw*/
     height: 100%; /*100% da altura disponivel*/
@@ -147,9 +158,7 @@ background-color: rgba(0, 0, 0, 0.8);
     margin-right: 5px;
     cursor: pointer;
 }
-.banner .pointer.active {
-    background-color: #b28756;
-}
+
 
 .defaut{
     padding-top: 50px;
